# hello-bazel

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  .npmrc  BUILD  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  deps.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
bazel/: cc.bzl  download.bzl  hello.bzl  http.bzl  poetry.bzl
bazel/poetry/: README.md  defs.bzl  poetry_lock.bzl
bazelrc/: remote.bazelrc
projects/cxx/: CMakeLists.txt
projects/cxx/calculator/: BUILD  BUILD.bazel  main.cc
projects/cxx/libcalc/: .gitignore  BUILD  BUILD.bazel  _libcalc
projects/cxx/libcalc/examples/: BUILD.bazel  simple.cc
projects/cxx/libcalc/examples/python/: BUILD.bazel  simple.py
projects/cxx/libcalc/src/libcalc/: _libcalc.py.cc  libcalc.hpp
projects/cxx/libcalc/src/libcalc/grammar/: grammar.hpp  parser.hpp  token.hpp
projects/cxx/libcalc/src/libcalc/math/: _math.py.hpp  arithmetic.hpp  exponential.hpp  math.hpp  tensor.hpp
projects/cxx/libcalc/tests/: BUILD  test_arthimetic.cc  test_exponential.cc
projects/cxx/libprint/: .gitignore  BUILD.bazel
projects/cxx/libprint/src/: _libprint.py.cc
projects/cxx/libprint/src/libprint/: _libprint.py.cc
projects/cxx/sayhi/: BUILD  BUILD.bazel  CMakeLists.txt
projects/cxx/sayhi/include/sayhi/: hello.h
projects/cxx/sayhi/src/: main.cc
projects/cxx/sayhi/src/sayhi/: hello.cc  main.cc
projects/js/app/: .gitignore  BUILD.bazel  README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.mts
projects/js/app/.scripts/: build.mjs
projects/js/app/src/platform/: main.ts  preload.ts
projects/js/app/src/workbench/: app.tsx  index.tsx  vite-env.d.ts
projects/js/hello/: BUILD.bazel  package.json  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
projects/js/hello/.scripts/: postinstall.cjs
projects/js/hello/src/: index.ts  say.ts  sayhi.test.ts
projects/js/simple/: package.json
projects/js/vite-electron-plugin/: BUILD.bazel  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.mts
projects/js/vite-electron-plugin/.scripts/: postinstall.cjs
projects/js/vite-electron-plugin/src/: electron-env.d.ts  host.ts  index.ts  not-bundle.ts  options.ts  plugin.ts  resolve-config.ts  resolve-external.ts  server.ts
projects/js/world/: package.json
projects/python/greet/: BUILD  BUILD.bazel
projects/python/greet/src/greet/: __init__.py
projects/python/greet/src/greet/config/: __init__.py  common.py
projects/python/greet/tests/: BUILD  BUILD.bazel
projects/python/greet/tests/config/: test_config.py
projects/python/hello/: BUILD  BUILD.bazel  main.py
python/hello/: BUILD
tools/artifacts/: BUILD.bazel  link_artifacts.py
tools/buildifier/: BUILD.bazel
tools/conditions/: BUILD.bazel
tools/copy/: BUILD.bazel  copy_artifacts.py
tools/format/: BUILD  BUILD.bazel
tools/lint/: linters.bzl
tools/lint/private/: aspect.bzl
tools/npm_module/: defs.bzl  npm_module.bzl
tools/poetry/: README.md  lock.bzl  repositories.bzl
tools/pybind11/: BUILD.bazel  defs.bzl  pybind_extension.bzl  stubgen.py
tools/pyright/: BUILD.bazel  pyright.bzl  run_pyright.py
tools/pytest/: BUILD.bazel  pytest_main.bzl
tools/ruff/: BUILD  BUILD.bazel  cli.py
