load("@aspect_rules_py//py:defs.bzl", "py_venv")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@pypi//:requirements.bzl", "requirement")

exports_files([
    "pyproject.toml",
])

refresh_compile_commands(
    name = "refresh_cc",
)

py_venv(
    name = "venv",
    # deps = all_requirements + [
    deps = [
        requirement("pandas"),
        requirement("numpy"),
        requirement("pydantic"),
        requirement("ruff"),
        # Add any additional requirements here
    ],
)
