# load("@aspect_rules_py//py:defs.bzl", "py_venv")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@pypi//:requirements.bzl", "requirement")
load("//tools/venv:venv.bzl", "py_venv")

package(default_visibility = ["//:__subpackages__"])

exports_files([
    "pyproject.toml",
])

refresh_compile_commands(
    name = "refresh_cc",
)

py_venv(
    name = "venv",
    venv_location = ".venv",
    deps = [
        requirement("pandas"),
        requirement("numpy"),
        requirement("pydantic"),
        requirement("ruff"),
        requirement("pytest"),
        # Add any additional requirements here
    ],
)

# Create the root of the "virtual store" of npm dependencies under bazel-out.
# This must be done in the package where the pnpm workspace is rooted.
npm_link_all_packages(name = "node_modules")

eslint_bin.eslint_binary(name = "eslint")
