###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# module(
#     name = "hello_bazel",
# )

# bazel_dep(name = "bazel_skylib", version = "1.5.0")
# bazel_dep(name = "rules_python", version = "0.31.0")
# bazel_dep(name = "platforms", version = "0.0.7")
# bazel_dep(name = "aspect_rules_py", version = "0.5.0")
