[tool.poetry]
name = "hello-bazel"
version = "0.1.0"
description = ""
authors = ["johnnyxcy <johnny.xcy1997@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[tool.pyright]
include = ["projects/python"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
executionEnvironments = [
    { root = "projects/python/greet", extraPaths = [
        "projects/python/greet/src",
    ] },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
