load("@pypi//:requirements.bzl", "requirement")

filegroup(
    name = "stubgen_srcs",
    srcs = ["stubgen.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "stubgen",
    srcs = [":stubgen_srcs"],
    visibility = ["//visibility:public"],
    deps = [requirement("numpy")],
)
