"""Python Binary"""

load("@npm//:pyright/package_json.bzl", pyright = "bin")

pyright.pyright_binary(
    name = "pyright",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "run",
    srcs = [
        "run_pyright.py",
    ],
    data = [
        ":pyright",
    ],
    main = "run_pyright.py",
    visibility = ["//visibility:public"],
)
