load("//tools/pybind11:defs.bzl", "pybind_extension")

filegroup(
    name = "srcs",
    srcs = ["src/libcalc/libcalc.hpp"] + glob([
        "src/libcalc/grammar/**/*.hpp",
        "src/libcalc/math/**/*.hpp",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "_pyext_srcs",
    srcs = [
        # entry
        "src/libcalc/_libcalc.py.cc",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "libcalc",
    srcs = [":srcs"],
    hdrs = [":srcs"],
    includes = ["./src"],
    visibility = [
        "//projects/cxx/calculator:__pkg__",
        "//projects/cxx/libcalc:__subpackages__",
    ],
    deps = [
        "@eigen",
    ],
)

pybind_extension(
    name = "_libcalc",
    srcs = [":_pyext_srcs"],
    stubgen = True,
)

# py_library(
#     name = "py_libcalc",
#     data = [":_libcalc"],
#     visibility = ["//visibility:public"],
# )
