load("//tools/pybind11:defs.bzl", "pybind_extension")

hpps = ["src/libcalc/libcalc.hpp"] + glob(
    [
        "src/libcalc/grammar/**/*.hpp",
        "src/libcalc/math/**/*.hpp",
    ],
    exclude = ["*.py.hpp"],
)

# pyhpps = ["src/libcalc/_libcalc.py.cc"] + glob([
#     "src/libcalc/grammar/**/*.py.hpp",
#     "src/libcalc/math/**/*.py.hpp",
# ])

filegroup(
    name = "srcs",
    srcs = hpps,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "_pyext_srcs",
    srcs = [
        # entry
        "src/libcalc/_libcalc.py.cc",
        "src/libcalc/math/_math.py.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "libcalc",
    srcs = [":srcs"],
    hdrs = [":srcs"],
    includes = ["./src"],
    visibility = [
        "//projects/cxx/calculator:__pkg__",
        "//projects/cxx/libcalc:__subpackages__",
    ],
    deps = [
        "@eigen",
    ],
)

pybind_extension(
    name = "_libcalc",
    srcs = [
        ":_pyext_srcs",
        ":srcs",
    ],
    includes = ["./src"],
    stubgen = True,
    deps = ["@eigen"],
)

# py_library(
#     name = "py_libcalc",
#     data = [":_libcalc"],
#     visibility = ["//visibility:public"],
# )
