load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//projects/js/app:vite/package_json.bzl", vite = "bin")

npm_link_all_packages(name = "node_modules")

runtime_deps = [
    "package.json",
    "tsconfig.json",
    "tsconfig.node.json",
]

node_modules_deps = [":node_modules" + d for d in [
    "@hello-bazel/hello",
    "@hello-bazel/vite-electron-plugin",
    "electron",
    "vite",
    "chalk",
    "@vitejs/plugin-react",
    "react",
    "react-dom",
]]

filegroup(
    name = "src",
    srcs = glob(
        include = ["src/**"],
        exclude = ["**/*.test.ts"],
    ),
)

vite.vite_binary(
    name = "vite",
    chdir = package_name(),
    data = ["vite.config.mts"],
)

js_run_devserver(
    name = "dev",
    data = [
        "vite.config.mts",
        ":src",
    ] + runtime_deps + node_modules_deps,
    tags = ["ibazel_notify_changes"],
    tool = ":vite",
)
