load("@aspect_rules_js//js:defs.bzl", "js_run_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//projects/js/hello:vite/package_json.bzl", vite = "bin")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "src",
    srcs = glob(
        include = ["src/**"],
        exclude = ["**/*.test.ts"],
    ),
)

runtime_deps = [
    "package.json",
    "tsconfig.json",
    "tsconfig.node.json",
]

node_modules_deps = [
    ":node_modules/electron",
    ":node_modules/vite",
    ":node_modules/vite-plugin-dts",
]

vite.vite_binary(
    name = "vite",
    chdir = package_name(),
    data = ["vite.config.mts"] + runtime_deps,
    visibility = ["//visibility:private"],
)

js_run_binary(
    name = "build",
    srcs = [":src"] + runtime_deps + node_modules_deps,
    args = ["build"],
    mnemonic = "vitebuild",
    out_dirs = [
        ".dist",
        ".build",
    ],
    tool = ":vite",
    visibility = ["//visibility:private"],
)

npm_package(
    name = "vite-electron-plugin",
    srcs = [
        "package.json",
        ":build",
    ],
    visibility = ["//visibility:public"],
)
