load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//projects/js/hello:vite/package_json.bzl", vite = "bin")
load("//tools/npm_module:defs.bzl", "npm_module")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "src",
    srcs = glob(
        include = ["src/**"],
        exclude = ["**/*.test.ts"],
    ),
)

runtime_deps = [
    "vite.config.mts",
    "package.json",
    "tsconfig.json",
    "tsconfig.node.json",
]

node_modules_deps = [
    ":node_modules/" + d
    for d in [
        "electron",
        "vite",
        "chalk",
        "vite-plugin-dts",
    ]
]

# vite.vite(
#     name = "build",
#     srcs = [":src"] + runtime_deps + node_modules_deps,
#     args = ["build"],
#     chdir = package_name(),
#     out_dirs = [
#         ".dist",
#         ".build",
#     ],
# )

# npm_package(
#     name = "vite-electron-plugin",
#     srcs = [
#         "package.json",
#         ":build",
#     ],
#     tags = [
#         "devkits",
#         "lib",
#     ],
#     visibility = ["//visibility:public"],
# )

vite.vite_binary(
    name = "vite",
    chdir = package_name(),
    data = [
        "package.json",
        "vite.config.mts",
    ],
)

npm_module(
    name = "vite-electron-plugin",
    srcs = [":src"] + runtime_deps + node_modules_deps,
    out_dirs = [
        ".dist",
    ],
    tool = ":vite",
    visibility = ["//visibility:public"],
)
