load("@pypi//:requirements.bzl", "requirement")
load("//tools/lint:linters.bzl", "pyright_lint_test", "ruff_lint_test")

filegroup(
    name = "srcs",
    srcs = glob([
        "src/**/*.py",
        "src/**/*.pyi",
    ]),
    visibility = ["//visibility:public"],
)

py_library(
    name = "greet",
    srcs = [":srcs"],
    imports = ["./src"],
    visibility = ["//projects/python:__subpackages__"],
    deps = [
        requirement("pydantic"),
    ],
)

ruff_lint_test(
    name = "ruff",
    srcs = [":greet"],
)

pyright_lint_test(
    name = "pyright",
    srcs = [":greet"],
)
