"""Python Binary"""

load("@pypi//:requirements.bzl", "requirement")
load("//tools/lint:linters.bzl", "ruff_lint_test")

py_binary(
    name = "hello",
    srcs = ["main.py"],
    imports = [".."],
    main = "main.py",
    deps = [
        requirement("pandas"),
        "//projects/python/greet",
    ],
)

ruff_lint_test(
    name = "lint",
    srcs = [":hello"],
)
