"""Python Binary"""

load("@pypi//:requirements.bzl", "requirement")
load("//tools/lint:linters.bzl", "pyright_lint_test", "ruff_lint_test")

py_binary(
    name = "hello",
    srcs = ["main.py"],
    imports = [".."],
    main = "main.py",
    deps = [
        requirement("pandas"),
        "//projects/python/greet",
    ],
)

ruff_lint_test(
    name = "ruff",
    srcs = [":hello"],
)

pyright_lint_test(
    name = "pyright",
    srcs = [":hello"],
    fail_on_violation = True,
)
