# load("@aspect_rules_py//py:defs.bzl", "py_pytest_main", "py_test")
load("@pypi//:requirements.bzl", "requirement")
load("//tools/lint:linters.bzl", "pyright_lint_test", "ruff_lint_test")
load("//tools/pytest:pytest_main.bzl", "py_pytest_main")

filegroup(
    name = "srcs",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
)

py_pytest_main(
    name = "__test__",
    deps = [requirement("pytest")],
)

py_library(
    name = "lib",
    srcs = [":srcs"],
    imports = ["../src"],
    visibility = ["//visibility:public"],
    deps = [
        "//projects/python/greet",
        requirement("pytest"),
    ],
)

py_test(
    name = "tests",
    testonly = True,
    srcs = [
        ":__test__",
        ":lib",
    ],
    main = ":__test__.py",
    visibility = ["//visibility:public"],
    deps = [
        ":__test__",
        "//projects/python/greet",
    ],
)

ruff_lint_test(
    name = "ruff",
    srcs = [":lib"],
)

pyright_lint_test(
    name = "pyright",
    srcs = [":lib"],
)
